[tool.poetry]
name = "code-choreographer"
version = "0.1.0"
description = ""
authors = ["doshikaran <doshikaran005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.34.0"
openai = "0.28"
streamlit-tree-select = "^0.0.5"
tiktoken = "^0.6.0"
graphviz = "^0.20.3"
install = "^1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
